Fix CMAKE formatting

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -74,7 +74,8 @@ set(LEVEL_SRC
         level/reader/ThemeReader.h
         level/reader/Reader.h
         level/reader/Reader.cpp
-        level/Theme.cpp)
+        level/Theme.cpp
+        )
 
 set(EQUIPMENT_SRC
         equipment/InventorySlot.h
@@ -87,7 +88,11 @@ set(BUILDER_SRC
         builders/IBuilder.h
         builders/CharacterBuilder.cpp
         builders/CharacterBuilder.h
-        sprite/SpriteDomain.cpp sprite/SpriteDomain.h builders/SpriteBuilder.cpp builders/SpriteBuilder.h)
+        sprite/SpriteDomain.cpp
+        sprite/SpriteDomain.h
+        builders/SpriteBuilder.cpp
+        builders/SpriteBuilder.h
+        )
 
 target_include_directories(
         engine PUBLIC
