Implement life system (#59)
* Implement life system

* Clang-format fixes

* Changes for review

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -29,6 +29,7 @@ set(COMPONENT_SRC
         components/EquipmentSpawnerComponent.h
         components/ItemComponent.h
         components/items/ReverseGravityComponent.h
+        components/LifeComponent.h
         )
 
 set(SYSTEM_SRC
@@ -54,7 +55,8 @@ set(SYSTEM_SRC
         systems/ItemSystem.h
         systems/items/ReverseGravitySystem.cpp
         systems/items/ReverseGravitySystem.h
-        )
+        systems/LifeSystem.cpp
+        systems/LifeSystem.h)
 
 set(DEFINITION_SRC
         definitions/Action.h
@@ -85,6 +87,8 @@ set(BUILDER_SRC
         builders/IBuilder.h
         builders/CharacterBuilder.cpp
         builders/CharacterBuilder.h
+        builders/CharacterSpawnGenerator.cpp
+        builders/CharacterSpawnGenerator.h
         )
 
 target_include_directories(
