Refactor RenderSystem to AnimationSystem and fix clang-tidy errors

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -43,8 +43,8 @@ set(SYSTEM_SRC
         systems/PositionSystem.h
         systems/SpriteSystem.cpp
         systems/SpriteSystem.h
-        systems/RenderSystem.cpp
-        systems/RenderSystem.h
+        systems/AnimationSystem.cpp
+        systems/AnimationSystem.h
         systems/WeaponSystem.cpp
         systems/WeaponSystem.h
         systems/InventorySystem.cpp
