Fix jump aye (#63)
* Fix jump

* Fix

* Remove .clang-format

* Add .clang-format

* Fix

* Fix

* Fix

* idk

* idk

* fix

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -79,6 +79,8 @@ set(PHYSICS_SRC
         physics/Collision.h
         physics/KinematicBody.cpp
         physics/KinematicBody.h
+        physics/ContactListener.h
+        physics/Contact.h
         )
 
 set(INPUT_SRC
