--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -12,10 +12,13 @@ set(GAME_SRC
         states/BaseMenuState.h
         exceptions/NoPlayersFoundException.h
         exceptions/MissingCharacterSpawnException.h
+        listeners/JumpContactListener.cpp
+        listeners/JumpContactListener.h
         )
 
 set(COMPONENT_SRC
         components/MoveComponent.h
+        components/JumpComponent.h
         components/PlayerInputComponent.h
         components/PositionComponent.h
         components/BodyComponent.h
@@ -56,7 +59,10 @@ set(SYSTEM_SRC
         systems/items/ReverseGravitySystem.cpp
         systems/items/ReverseGravitySystem.h
         systems/LifeSystem.cpp
-        systems/LifeSystem.h)
+        systems/LifeSystem.h
+        systems/JumpSystem.cpp 
+        systems/JumpSystem.h
+        )
 
 set(DEFINITION_SRC
         definitions/Action.h
@@ -74,7 +80,8 @@ set(LEVEL_SRC
         level/reader/ThemeReader.h
         level/reader/Reader.h
         level/reader/Reader.cpp
-        level/Theme.cpp)
+        level/Theme.cpp
+        )
 
 set(EQUIPMENT_SRC
         equipment/InventorySlot.h
