--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -87,11 +87,9 @@ set(INPUT_SRC
         input/Keys.h
         input/SDLKeys.cpp
         input/SDLKeys.h
-        input/maps/KeyMap.cpp
-        input/maps/KeyMap.h
         input/KeyStates.h
-        input/maps/AnalogMap.cpp
-        input/maps/AnalogMap.h
+        input/maps/InputMap.cpp
+        input/maps/InputMap.h
         input/AnalogKeys.h)
 
 set(EVENTS_SRC
@@ -164,8 +162,8 @@ set(UI_SRC
         ui/components/TextComponent.cpp
         ui/components/ComponentPanel.h
         ui/components/CustomAction.h
-        input/maps/InputMap.cpp
-        input/maps/InputMap.h
+        input/maps/InputMaps.cpp
+        input/maps/InputMaps.h
         input/SDL_Axis.h
         input/SDL_Axis.cpp
         ui/components/Image.cpp
