set a default shooting direction
- added direction component
this keeps track of the last direction the player moved, and so is "looking"

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -30,7 +30,7 @@ set(COMPONENT_SRC
         components/ItemComponent.h
         components/items/ReverseGravityComponent.h
         components/LifeComponent.h
-        )
+        components/DirectionComponent.h)
 
 set(SYSTEM_SRC
         systems/MovementSystem.cpp
