Add a garbage collector that deletes entities outside of level bounds… (#57)
* Add a garbage collector that deletes entities outside of level bounds (excluding players, which are marked 'essential')

* Increase readability by adding ugly braces

* Only delete entities which are not visible

* Create camera on stack and pass pointers to users, pass pointers to some ECS world users

* Store pos and dimension in const reference

* Always delete out of bounds entities even if visible on screen

* Clang-format

* Refactor CameraSystem and prevent showing regions outside the level bounds

* Fix << operator for Vector2D

* Fix hardcoded screensize in UI framework, fix SDLWindow only returning dimensions that were set in windowProperties.

* Improve camera in numerous ways, including using the level bounds instead of hardcoded "-2" value

* Refactor GarbageCollector into a separate system (ProjectileDestroyer) which marks out-of-bounds projectiles as destructible.

* clang-format

* Set priority for projectile system to Low, so that projectiles are marked at the end of each update iteration. The collector will clean them up quickly in the next iteration.

* Destroy physics body when collecting garbage

* Destroy bodies

* Fix clang tidy issue

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -35,7 +35,7 @@ set(COMPONENT_SRC
         components/ItemComponent.h
         components/items/ReverseGravityComponent.h
         components/LifeComponent.h
-        )
+        components/DestructibleComponent.h)
 
 set(SYSTEM_SRC
         systems/MovementSystem.cpp
@@ -60,12 +60,16 @@ set(SYSTEM_SRC
         systems/ItemSystem.h
         systems/items/ReverseGravitySystem.cpp
         systems/items/ReverseGravitySystem.h
+        systems/GarbageCollectorSystem.cpp
+        systems/GarbageCollectorSystem.h
         systems/LifeSystem.cpp
         systems/LifeSystem.h 
         systems/BackgroundSystem.cpp 
         systems/BackgroundSystem.h
         systems/JumpSystem.cpp 
         systems/JumpSystem.h
+        systems/ProjectileDestroyerSystem.cpp
+        systems/ProjectileDestroyerSystem.h
         )
 
 set(DEFINITION_SRC
