Feature/level selection (#71)
* Add boost-filesystem dependency

* Add LevelSelectorState

* Commet out unused parameter

* Use older boost type path iteration to satisfy Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
       - libsdl2-image-dev
       - libsdl2-mixer-dev
       - libbox2d-dev
+      - libboost-filesystem-dev
 
 python:
   - "2.7"
