--- a/.travis.yml
+++ b/.travis.yml
@@ -30,18 +30,27 @@ install:
 before_script:
   - export CC=gcc-8
   - export CXX=g++-8
-
-script:
-  - mkdir build
-  - cd build
-  - cmake .. -DENABLE_CLANG_TIDY=ON
-  - make  
-  - ../bin/tests
-  - ../external/Clang-Format/run-clang-format.py -r --exclude '*/.ccls-cache/*' ../engine ../game
-  - make tidy &> output.txt
-  - |
-    if [[ -n $(awk '/^[^[:blank:]]/{p=0} (/ warning:/||/error:/)&&(!/\/include\/SDL/)&&(!/external/){p=1} p' output.txt) ]]; then
-        awk  '/^[^[:blank:]]/{p=0} (/ warning:/||/ error:/)&&(!/\/include\/SDL/)&&(!/external/){p=1} p' output.txt > output2.txt
-        awk '(/ warning: /||/ error: /){p=!($0 in a);a[$0]}p' output2.txt | grep --color=always -z -E 'warning|error|note|\^'
-        exit -1;
-    fi
+jobs:
+  include:
+    - stage: build
+    name: "Build, test, format"
+    script:
+      - mkdir build
+      - cd build
+      - cmake .. -DENABLE_CLANG_TIDY=ON
+      - make
+      - ../bin/tests
+      - ../external/Clang-Format/run-clang-format.py -r --exclude '*/.ccls-cache/*' ../engine ../game
+    name: "Clang tidy"
+    - script:
+      - mkdir build
+      - cd build
+      - cmake .. -DENABLE_CLANG_TIDY=ON
+      - make
+      - make tidy &> output.txt
+      - |
+        if [[ -n $(awk '/^[^[:blank:]]/{p=0} (/ warning:/||/error:/)&&(!/\/include\/SDL/)&&(!/external/){p=1} p' output.txt) ]]; then
+            awk  '/^[^[:blank:]]/{p=0} (/ warning:/||/ error:/)&&(!/\/include\/SDL/)&&(!/external/){p=1} p' output.txt > output2.txt
+            awk '(/ warning: /||/ error: /){p=!($0 in a);a[$0]}p' output2.txt | grep --color=always -z -E 'warning|error|note|\^'
+            exit -1;
+        fi
