Thinking with portals (#82)
* Add portal gun projectile and listen for collision

* Create portals everywhere

* Remove projectile entity after collision

* Add alternate fire

* Allow only one portal of each type to be active

* Teleport between portals

* Move sprites into one file

* Fix sprites

* Add margin to projectile destroyer

* Use projectile location to place portal

* Make portals feel better

* Remove projectile bodies

* Add force gun and portal gun sprites to spawner

* Fix force gun bullets

* Oops

* Fix format/tidy

* fuck clang-format

* Shoot yourself in the arse with portals

* Format

* Fix remarks

* Fix

* Fix

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -23,6 +23,12 @@ set(GAME_SRC
         listeners/JumpContactListener.h
         states/LevelSelectorState.cpp
         states/LevelSelectorState.h
+        listeners/ProjectileContactListener.cpp 
+        listeners/ProjectileContactListener.h
+        listeners/PortalContactListener.cpp 
+        listeners/PortalContactListener.h
+        listeners/ProjectilePortalContactListener.h
+        listeners/ProjectilePortalContactListener.cpp
         states/ScoreState.cpp
         states/ScoreState.h
         )
@@ -36,6 +42,7 @@ set(COMPONENT_SRC
         components/DimensionComponent.h
         components/SpriteComponent.h
         components/EquipmentComponent.h
+        components/PortalComponent.h
         components/WeaponComponent.h
         components/InventoryComponent.h
         components/EquipableComponent.h
@@ -44,7 +51,9 @@ set(COMPONENT_SRC
         components/ItemComponent.h
         components/items/ReverseGravityComponent.h
         components/LifeComponent.h
-        components/DestructibleComponent.h)
+        components/DestructibleComponent.h
+        components/TeleportComponent.h
+        )
 
 set(SYSTEM_SRC
         systems/MovementSystem.cpp
@@ -79,6 +88,10 @@ set(SYSTEM_SRC
         systems/JumpSystem.h
         systems/ProjectileDestroyerSystem.cpp
         systems/ProjectileDestroyerSystem.h
+        systems/CooldownSystem.cpp
+        systems/CooldownSystem.h
+        systems/TeleportSystem.cpp
+        systems/TeleportSystem.h
         systems/ScoreSystem.cpp
         systems/ScoreSystem.h
         )
@@ -86,6 +99,7 @@ set(SYSTEM_SRC
 set(DEFINITION_SRC
         definitions/Action.h
         definitions/WeaponType.h
+        definitions/ProjectileType.h
         definitions/ItemType.h
         )
 
