Feature/volume options (#76)
* Add slider and option menu state

* Use simpler method for converting double to string

* Add config files (wip)

* Add user config repository

* Read volume from config in options menu, add sliders for sfx and music volume

* todo and empty saveConfig method

* clean up main menu and option menu state a bit

* Change color of unfocused numeric slider value

* Save volume options when exiting OptionsMenuState

* Fix alignment of PauseMenu

* use gamestate soundmanager

* Fix playerinputsystem being created in CharacterBuilder without a sound manager.
Fix reverse gravity system being created without a sound manager.
Re-order some systems

* Apply volume set in options to sound managers

* New jump sound

* Normalize all sounds so volume isn't too different

* Reduce size of audio files and remove unused bgm wav

* Add controller support to NumericSlider (untested)

* Remove unnecessary analogmap check when keystate is down

* Fix duplicate in CMAKE

* Improve comments

* Disable maximized, this is for another PR

* Fix inconsistency in .h vs .cpp parameter names

* Remove unnecessary namespace in configuration repository

Co-Authored-By: FabioGNR <FabioGNR@users.noreply.github.com>

* Move master volume slider up (first slider)

* Fix stackpanel not properly using margin of components to calculate size

* Add minor text padding for buttons and slightly improve calculateSize variable names

* Add two separate buttons to options menu: one that saves the config and one that cancels

* Separate margin into marginStart and marginEnd, remove margin on pause menu resume button

* Store volume options as integer

* Move ownership of the sound manager to the game class, update volume every 500ms while in options menu

* Reduce audio lag by lowering Mixer sample size

* Use auto after cast

* Replace jump sound with two random jump sounds

* Add line between min,max boxes and c

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -68,7 +68,11 @@ set(GRAPHICS_SRC
         graphics/Color.h
         graphics/Camera.h
         graphics/Camera.cpp
-        graphics/BlendModes.h 
+        graphics/BlendModes.h
+        graphics/SDL/SDLBlendModes.h
+        graphics/SDL/SDLBlendModes.cpp
+        graphics/drawable/Surface.cpp
+        graphics/drawable/Surface.h
         )
 
 set(PHYSICS_SRC
@@ -107,10 +111,10 @@ set(INPUT_SRC
         input/SDL_Input/SDL_ConKeys.cpp
         input/SDL_Input/SDL_ConKeys.h
         input/SDL_Input/SDL_MouseKeys.h
-        input/SDL_Input/SDL_MouseKeys.cpp)
+        input/SDL_Input/SDL_MouseKeys.cpp
+        )
 
 set(EVENTS_SRC
-        events/models/MouseEvent.h
         events/IEventHandler.h
         events/SDLEventHandler.cpp
         events/SDLEventHandler.h
@@ -120,6 +124,7 @@ set(EVENTS_SRC
         events/models/IControlEvent.h
         events/models/KeyUpEvent.h
         events/models/KeyDownEvent.h
+        events/models/MouseEvent.h
         events/models/QuitEvent.h
         events/models/Subscription.h
         events/models/ControllerEvent.h
@@ -184,6 +189,8 @@ set(UI_SRC
         ui/components/CustomAction.h
         ui/components/Image.cpp
         ui/components/Image.h
+        ui/components/NumericSlider.cpp
+        ui/components/NumericSlider.h
         )
 
 # more engine stuff
