Changing animation state (#86)
* Start animating player

* Switch to other animation

* Adjust jump height in Ice level

* Do some edits

* Small edit

* Clang-format

* Clang-tidy fixes

* Implement requested changes for PR

* remove CharacterState

* Remove CharacterState

* Fix requested changes

* Clang-format

* Rename to flippedHorizontal / flippedVertical

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -54,6 +54,7 @@ set(COMPONENT_SRC
         components/items/ReverseGravityComponent.h
         components/LifeComponent.h
         components/DestructibleComponent.h
+        components/DestructibleComponent.h
         components/TeleportComponent.h
         components/DirectionComponent.h
         components/PunchComponent.h
@@ -174,6 +175,8 @@ set(BUILDER_SRC
         sprite/SpriteDomain.h
         builders/SpriteBuilder.cpp
         builders/SpriteBuilder.h
+        systems/PlayerAnimationSystem.cpp
+        systems/PlayerAnimationSystem.h
         )
 
 find_package(Boost COMPONENTS
