Move input bindings to separate class (#92)

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -166,6 +166,8 @@ set(CONFIG_SRC
         config/ConfigurationRepository.h
         config/ConfigurationRepository.cpp
         exceptions/CanNotSaveConfigException.h
+        config/InputConfiguration.cpp
+        config/InputConfiguration.h
         )
 
 #more engine stuff
