--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -71,7 +71,7 @@ set(COMPONENT_SRC
         components/AIComponent.h
         components/OnOutOfBoundsDeleteComponent.h
         components/PlayerSpritesComponent.h
-        )
+        components/VisualEffectComponent.h)
 
 set(SYSTEM_SRC
         systems/MovementSystem.cpp
@@ -118,6 +118,10 @@ set(SYSTEM_SRC
         systems/MVPSystem.h
         systems/PunchingSystem.cpp
         systems/PunchingSystem.h
+        systems/VisualEffectSystem.cpp
+        systems/VisualEffectSystem.h
+        systems/PlayerAnimationSystem.cpp
+        systems/PlayerAnimationSystem.h
         systems/AISystem.cpp
         systems/AISystem.h
         )
@@ -203,8 +207,6 @@ set(BUILDER_SRC
         builders/SpriteBuilder.h
         builders/BunnyBuilder.cpp
         builders/BunnyBuilder.h
-        systems/PlayerAnimationSystem.cpp
-        systems/PlayerAnimationSystem.h
         )
 
 find_package(Boost COMPONENTS
