Feature/new force gun (#107)
* Change force gun to grenade launcher and add old force gun

* Change values for grenade launcher

* Fix Force gun and Grenade launcher!

* Removed printlns

* resolve conflicts

* Fix requested changes

* Fix warning

* Update game/listeners/ProjectileContactListener.h

Co-Authored-By: JorisWillig <jorisjellewillig@gmail.com>

* Possible fix for shooting grenade onto player not doing anything

* Destroy entities next update

--- a/assets/sprites/projectiles/projectiles.json
+++ b/assets/sprites/projectiles/projectiles.json
@@ -18,6 +18,23 @@
       }
     },
     {
+      "name": "GrenadeProjectile",
+      "frameCount": 1,
+      "frameTime": 0.1,
+      "frameSize": {
+        "x": 8,
+        "y": 8
+      },
+      "topLeft": {
+        "x": 16,
+        "y": 0
+      },
+      "offset": {
+        "x": 0,
+        "y": 0
+      }
+    },
+    {
       "name": "BluePortalProjectile",
       "frameCount": 1,
       "frameTime": 0.1,
