Add a limited resource cache to prevent infinite memory being consumed

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -25,6 +25,7 @@ set(COMMON_SRC
         common/ResourceCache.h
         common/RNG.h
         common/RNG.cpp
+        common/LimitedResourceCache.h
         )
 
 set(ECS_SRC
